--- a/package.json
+++ b/package.json
@@ -7,14 +7,16 @@
   "description": "A simple Node app with SQLite as a database management system, instantly up and running.",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "lint": "standard"
   },
   "dependencies": {
     "express": "^4.16.3",
-    "sqlite3": "^4.0.0",
-    "node-localstorage": "^1.3.1",
     "express-session": "^1.15.6",
-    "session-file-store": "^1.2.0"
+    "node-localstorage": "^1.3.1",
+    "session-file-store": "^1.2.0",
+    "sqlite3": "^4.0.0",
+    "standard": "^12.0.1"
   },
   "engines": {
     "node": "8.x"
@@ -27,5 +29,10 @@
     "node",
     "glitch",
     "express"
-  ]
+  ],
+  "standard": {
+    "ignore": [
+      "public/graphpaper.js"
+    ]
+  }
 }
